<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:orientation="vertical">

            <ImageView
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:id="@+id/userImage"
                android:src="@mipmap/ic_launcher"
                android:scaleType="centerCrop"/>

            <TextView
                android:id="@+id/TextView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/register_upload_foto"
                android:textSize="14sp"
                android:textStyle="bold" />

            <View
                android:id="@+id/View1"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:background="#448AFF" />

            <!--<TextView
                android:id="@+id/TextView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dip"
                android:text="BUAT AKUN DI BAWAH"
                android:textSize="16dip" />-->

            <TextView
                android:id="@+id/txtHp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/txtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView8"
                android:layout_marginTop="8dp"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Nama pengguna :" />

            <EditText
                android:id="@+id/txt_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="4dp"
                android:inputType="textPersonName"
                android:singleLine="true"
                android:background="@android:drawable/editbox_background_normal"
                android:textSize="18sp"
                android:digits="0,1,2,3,4,5,6,7,8,9,abcdefghijklmnopqrstuvwxyz"
                android:hint="Hanya huruf kecil dan angka yang diperbolehkan"/>

            <TextView
                android:id="@+id/textView10"
                android:layout_marginTop="8dp"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Nama Akun :" />

            <EditText
                android:id="@+id/editTextNama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="4dp"
                android:inputType="textPersonName"
                android:singleLine="true"
                android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZ,abcdefghijklmnopqrstuvwxyz "
                android:hint="Hanya huruf dan spasi yang diperbolehkan"
                android:background="@android:drawable/editbox_background_normal"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView11"
                android:layout_marginTop="8dp"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Password :" />

            <EditText
                android:id="@+id/txt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="4dp"
                android:password="true"
                android:maxLength="12"
                android:singleLine="true"
                android:background="@android:drawable/editbox_background_normal"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView12"
                android:layout_marginTop="8dp"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Konfirmasi Password :" />

            <EditText
                android:id="@+id/txt_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="4dp"
                android:singleLine="true"
                android:background="@android:drawable/editbox_background_normal"
                android:inputType="textPassword"
                android:textSize="18sp" />


            <Button
                android:id="@+id/btn_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:background="#448AFF"
                android:textColor="#fff"
                android:text="@string/buat_akun"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="15dp"
                android:background="#00555555"
                android:text="@string/btn_login"
                android:textStyle="bold" />

        </LinearLayout>


    </ScrollView>


</RelativeLayout>